# SyArm_Mk1

./: .gitignore  .gitmodules  A.asm  A.cfg  A_SyArm_Mk1.asm  A_SyArm_Mk1.cfg  A_SyArm_Mk1.dft  LICENSE  README.md  SyArm_Mk1.asm  SyArm_Mk1.cfg  SyArm_Mk1.code-workspace  index.html
Standard/: N1_[DIN_933]_Hexagon_Head_Screw_M12x180x40.par
SyArm Mk1_files/: filelist.xml  header.htm  props002.xml
code/syarm_app/: Cargo.toml
code/syarm_app/src/: main.rs
construction/A1_BaseMk1/: Base_Mk1.asm  Cap.par  CylinderBeam.par  Shaft.par
construction/A1_SimpleFrame_Mk1/: Readme.md  SimpleFrame_Mk1.asm  SimpleFrame_Mk1.cfg  [SY 1] SimpleFrame_Mk1 200x90x30.cfg  [SY_1]_SimpleFrame_Mk1_200x90x30.asm  [SY_1]_SimpleFrame_Mk1_200x90x30.cfg
construction/A2_Arm_Mk1/: SegementsConnector.par
construction/A2_Arm_Mk2/: Arm_Mk2.asm
construction/A2_Cylinder_Mk2/: 1_Mount.par  2_Shaft.par  A_Cylinder_Mk2.asm  A_Cylinder_Mk2.cfg  README.md
construction/A3_AxisBearing_Mk1/: Connector.par
construction/A3_Base_Mk1/: 10_StepperPlate.par  5_BearingPlate.par  9_Shaft.par  A3_Base_Mk1.asm  A3_Base_Mk1.cfg  BaseConnectors.par  BasePlate.par  Base_Mk1.cfg  BeamConnector.par  FloorPlate.par  README.md
construction/A4_Arm_Mk2/: A4_Arm_Mk2.asm  A4_Arm_Mk2.cfg  Arm_Mk2.asm  README.md
construction/A5_AxisBearing_Mk1/: A5_AxisBearing_Mk1.asm  A5_AxisBearing_Mk1.cfg  BearingCap.par  BearingCase.par  README.md  adj4EAC.cfg
documentation/: .$Steptime.drawio.bkp  .$Types of movement.drawio.bkp  Protocol.xlsx  SyArm Mk1.docx  SyArm Mk1.mht  ~$Arm Mk1.docx  ~$Arm Mk1.mht  ~WRL2202.tmp
(+162 files in other folders)
