[package]
name = "syarm_app"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.1.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

syarm_lib = { path = "../../../../Libraries/syarm_lib" } # { git = "https://github.com/SamuelNoesslboeck/syarm_lib" }